--- a/style.css
+++ b/style.css
@@ -116,6 +116,17 @@
 }
 /* all similar content code */
 
+.about, .services, .skills{
+  font-family: 'Poppins', sans-serif;
+
+}
+.about .about-content,
+.services .serv-content, .skills .skills-content {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
 section {
   padding: 100px 0;
 }
@@ -157,20 +168,11 @@ section .title::after {
 
 /* about section styling */
 
-.about, .services{
-  font-family: 'Poppins', sans-serif;
-
-}
 
 .about .title::after{
   content: "who i am";
 }
-.about .about-content, .services .serv-content{
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content:space-between;
-}
+
 
 .about .about-content .left{
   width: 45%;
@@ -264,6 +266,92 @@ section .title::after {
   font-weight: 500;
   margin: 10px 0 7px 0;
 }
+
+/* skills section styling */
+
+.skills .title::after{
+  content: "What i know";
+}
+.skills .skills-content .column{
+  width: calc(50% - 30px);
+}
+.skills .skills-content .left .text{
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+.skills .skills-content .left .p{
+  text-align: justify;
+}
+.skills .skills-content .left .a{
+  display: inline-block;
+  background: crimson;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 8px 16px;
+  margin-top: 20px;
+  border-radius: 6px;
+  border: 2px solid crimson;
+  transition: all 0.3s ease;
+}
+.skills .skills-content .left .a:hover{
+color:crimson;
+background: none;
+}
+.skills .skills-content .right .bars{
+  margin-bottom: 15px;  
+}
+.skills .skills-content .right .info{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  
+}
+
+.skills .skills-content .right .span{
+  font-weight: 500;
+  font-size: 18px;
+  
+}
+.skills .skills-content .right .line{
+  height:5px ;
+  width: 100%;
+  background: lightgrey;
+  position: relative;
+}
+.skills .skills-content .right .line::before{
+  content: "";
+  position: absolute;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: crimson;
+
+}
+.skills-content .right .html::before{
+  width:90%
+}
+.skills-content .right .css::before{
+  width:60%
+}
+.skills-content .right .js::before{
+  width:80%
+}
+.skills-content .right .python::before{
+  width:70%
+}
+.skills-content .right .sql::before{
+  width:50%
+}
+
+
+
+
+
+
+
+
 /* responsive media query start */
 @media (max-width: 1300px) {
   .home .max-width {
@@ -334,6 +422,11 @@ section .title::after {
   .about .about-content .right{
     flex:100%;
   }
+  .services .serv-content .card{
+    width:calc(50% - 10px);
+    margin-bottom: 20px;
+    
+  }
 }
 
 @media (max-width: 690px) {
@@ -350,6 +443,9 @@ section .title::after {
     font-size: 20px;
     /* padding: 9px 25px; */
   }
+  .services .serv-content .card {
+    width: 100%;
+    }
 }
 @media (max-width: 500px) {
   .max-width {
