--- a/style.css
+++ b/style.css
@@ -280,10 +280,10 @@ section .title::after {
   font-weight: 600;
   margin-bottom: 10px;
 }
-.skills .skills-content .left .p{
+.skills .skills-content .left p{
   text-align: justify;
 }
-.skills .skills-content .left .a{
+.skills .skills-content .left a{
   display: inline-block;
   background: crimson;
   color: #fff;
@@ -295,7 +295,7 @@ section .title::after {
   border: 2px solid crimson;
   transition: all 0.3s ease;
 }
-.skills .skills-content .left .a:hover{
+.skills .skills-content .left a:hover{
 color:crimson;
 background: none;
 }
@@ -304,6 +304,7 @@ background: none;
 }
 .skills .skills-content .right .info{
   display: flex;
+  margin-bottom: 5px;
   align-items: center;
   justify-content: space-between;
   
@@ -427,6 +428,10 @@ background: none;
     margin-bottom: 20px;
     
   }
+  .skills .skills-content .column {
+   width: 100%;
+   margin-bottom: 35px;
+  }
 }
 
 @media (max-width: 690px) {
@@ -443,9 +448,11 @@ background: none;
     font-size: 20px;
     /* padding: 9px 25px; */
   }
-  .services .serv-content .card {
+  .services .serv-content .card, 
+  .skills .skills-content .column {
     width: 100%;
-    }
+    margin-bottom: 25px;
+  }
 }
 @media (max-width: 500px) {
   .max-width {
