--- a/style.css
+++ b/style.css
@@ -116,7 +116,7 @@
 }
 /* all similar content code */
 
-.about, .services, .skills{
+.about, .services, .skills, .teams{
   font-family: 'Poppins', sans-serif;
 
 }
@@ -222,14 +222,16 @@ section .title::after {
 
 
 /* services section styling */
-.services{
+.services, .teams{
   color: #fff;
   background: #111;
 }
-.services .title::before{
+.services .title::before,
+.teams .title::before{
   background: #fff;
 }
-.services .title::after {
+.services .title::after,
+  .teams .title::after{
   background: #111;
   content:"what i provide"
 }
@@ -346,13 +348,69 @@ background: none;
   width:50%
 }
 
+/* teams section styling */
 
+.teams .title::after{
+  content:"who with me";
+}
+.teams .carousel .card{
+  background: #222;
+  border-radius: 6px;
+  padding:25px 35px;
+  text-align: center;
+  transition: all 0.3s ease;
 
-
-
-
-
-
+}
+.teams .carousel .card:hover{
+  background: crimson;
+  transform: scale(1.05);
+}
+.teams .carousel .card .box{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  transition: all 0.3s ease;
+}
+.teams .carousel .card .text{
+  font-size: 25px;
+  font-weight: 500;
+  margin: 10px 0 7px 0;
+}
+.teams .carousel .card img{
+height:150px;
+width:150px;
+object-fit: cover;
+border-radius: 50px;
+border:1px solid crimson;
+transition: all 0.3s ease;
+}
+.teams .carousel .card:hover img {
+  border-color:#fff;
+}
+.owl-dots{
+  text-align: center;
+  margin-top: 20px;
+}
+.owl-dot{
+  height: 13px;
+  width: 13px;
+  margin: 0 5px;
+  outline: none!important;
+  border-radius: 50%;
+  border: 2px solid crimson!important;
+  transition: all 0.3s ease;
+}
+.owl-dot.active{
+  
+  border-radius: 14px;
+  width: 35px;
+}
+.owl-dot.active,
+.owl-dot:hover{
+  background: crimson!important;
+}
 /* responsive media query start */
 @media (max-width: 1300px) {
   .home .max-width {
