--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
   text-decoration: none;
 }
+html{
+  scroll-behavior: smooth;
+}
+
 .max-width {
   max-width: 1300px;
   padding: 0 80px;
@@ -48,6 +52,7 @@
 }
 
 .navbar .menu li a {
+  display: block;
   color: #fff;
   font-size: 18px;
   font-weight: 500;
@@ -116,7 +121,7 @@
 }
 /* all similar content code */
 
-.about, .services, .skills, .teams, .contact{
+.about, .services, .skills, .teams, .contact, footer{
   font-family: 'Poppins', sans-serif;
 
 }
@@ -450,10 +455,105 @@ transition: all 0.3s ease;
 .contact .contact-content .info .sub-title{
   color:#333;
 }
-.contact .right .form .fields{
+.contact .right form .fields{
   display: flex;
   
 }
+
+.contact .right form .field,
+.contact .right form .fields .field{
+height: 45px;
+width: 100%;
+margin-bottom: 15px;
+}
+.contact .right form .textArea {
+  height: 80px;
+  width: 100%;
+}
+.contact .right form .name{
+  margin-right: 10px;
+}
+.contact .right form .email{
+  margin-left: 10px;
+}
+
+.contact .right form .field input,
+.contact .right form .textArea textarea{
+  height: 100%;
+  width: 100%;
+  border: 1px solid lightgrey;
+  border-radius: 6px;
+  outline: none;
+  padding: 0 15px;
+  font-size: 17px;
+  font-family: 'Poppins', sans-serif;
+}
+.contact .right form .textArea textarea{
+  padding-top: 10px;
+  resize: none;
+}
+.contact .right form .button{
+  height: 47px;
+  width: 170px;
+}
+.contact .right form .button button{
+  height: 100%;
+  width: 100%;
+  border: 2px solid crimson;
+  border-radius: 6px;
+  background: crimson;
+  color:#fff;
+  font-size: 20px;
+  font-weight: 500;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+.contact .right form .button button:hover{
+  color: crimson;
+  background: none;
+}
+
+/* footer styling start */
+
+footer{
+  background: #111;
+  padding: 20px 23px;
+  color: #fff;
+}
+footer span a{
+  color: crimson;
+  text-decoration: none;
+}
+footer span a:hover{
+  text-decoration: underline;
+}
+
+.scroll-up-btn{
+  position: fixed;
+  height: 45px;
+  width: 42px;
+  background: crimson;
+  right: 30px;
+  bottom: 10px;
+  text-align: center;
+  line-height: 45px;
+  color: #fff;
+  z-index: 9999;
+  font-size: 30px;
+  border-radius: 6px;
+  cursor: pointer;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.3s ease;
+}
+.scroll-up-btn.show {
+  opacity: 1;
+  bottom: 30px;
+  pointer-events: auto;
+  
+}
+
+
 
 
 /* responsive media query start */
@@ -531,7 +631,8 @@ transition: all 0.3s ease;
     margin-bottom: 20px;
     
   }
-  .skills .skills-content .column {
+  .skills .skills-content .column,
+  .contact .contact-content .column {
    width: 100%;
    margin-bottom: 35px;
   }
